--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -6540,7 +6540,7 @@
  MAL.conservatism: "£MAL_western_conservative (FARE) - Alternative Forces for Renewal and Emergence"
  MAL.conservatism_desc: "(Conservative) - Alternative Forces for Renewal and Emergence (French: Forces Alternatives pour le Renouveau et l'Emergence, FARE)\nThe Alternative Forces for Renewal and Emergence is a conservative party formed in opposition of the government and they're perceieved corruption of the government. Formed by Soumana Mory Coulibaly, FARE campaigns on anti-corruption, social conservatism and some other minor policies on their platform."
  MAL.conservatism_icon: "£MAL_western_conservative"
- MAL.liberalism_2003: "MAL_western_liberalism (URD) - Union for the Republic and Democracy"
+ MAL.liberalism_2003: "£MAL_western_liberalism (URD) - Union for the Republic and Democracy"
  MAL.liberalism_2003_desc: "(Social Liberalism) - Union for the Republic and Democracy (French: Union pour la République et la Démocratie, URD)\nUnion for the Republic and Democracy is a social liberalism party in Mali. Founded by supporters of Soumaïla Cissé, the party was founded as a reaction to the then president Alpha Oumar Konaré, who supported Amadou Touré against his own party. Furthermore, the party is regionally affiliated with the Africa Liberal Network and then the broader internationally recognized Centrist Democract International."
  MAL.liberalism_2003_icon: "£MAL_western_socialist"
  MAL.socialism_2001: "£MAL_western_socialist (RPM) - Rally for Mali"
@@ -6579,7 +6579,7 @@
  MAU.conservatism_icon: "£MAU_western_conservative"
  MAU.socialism: "£MAU_western_socialist El Karama"
  MAU.socialism_icon: "£MAU_western_socialist"
- MAU.socialism_desc: "The Association of Synergy of Macau, often shortened to Synergy of Macao, is a centrist political party in Macau."
+ MAU.socialism_desc: ""
  MAU.anarchist_communism: "£MAU_anarchist_communism People's Progressive Alliance"
  MAU.anarchist_communism_icon: "£MAU_anarchist_communism"
  MAU.anarchist_communism_desc: ""
@@ -6608,7 +6608,7 @@
  MAU.Nat_Fascism: "£MAU_national_fascism National Vanguard Party"
  MAU.Nat_Fascism_icon: "£MAU_national_fascism"
  MAU.Nat_Fascism_desc: ""
- MAU.Nat_Autocracy: "£MAU_nationalist_junta Malian Armed Forces"
+ MAU.Nat_Autocracy: "£MAU_nationalist_junta Mauritanian Armed Forces"
  MAU.Nat_Autocracy_desc: ""
  MAU.Nat_Autocracy_icon: "£MAU_nationalist_junta"
  # Malaysia
