--- a/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SUB_l_simp_chinese.yml
@@ -1954,3 +1954,25 @@
  BSH_volga_ssr_sov_desc: "我们准备向俄罗斯提供一个全新的实体，它将能够将该地区的经济提升到一个新的水平。"
  BSH_volga_ssr_annex: "独立的伏尔加苏维埃社会主义共和国"
  BSH_volga_ssr_annex_desc: "我们将与伏尔加河地区人民一起，在前俄罗斯领土上建立最强大的国家。"
+ TAT_agro_export: "与§Y[TAT.GetNamewithFlag]§!合作"
+ subject_rus.51.t: "[TAT.GetNameWithFlag]向我们提供合作协议"
+ subject_rus.51.d: "[TAT.GetNameWithFlag]提议我们与他们的农业工业综合体签订一项涉及合作的贸易协定。我们会同意吗？"
+ subject_rus.51.a: "不错的提议"
+ subject_rus.51.b: "不"
+ subject_rus.52.t: "[FROM.GetNameWithFlag]已经同意合作"
+ subject_rus.52.d: "[FROM.GetNameWithFlag]已同意与我们签订与我国农业产业合作的合同"
+ subject_rus.52.a: "很好"
+ subject_rus.53.t: "[FROM.GetNameWithFlag]拒绝合作"
+ subject_rus.53.d: "[FROM.GetNameWithFlag]拒绝与我们签订农业产业合作合同"
+ subject_rus.53.a: "很好"
+ subject_rus.54.t: "[BSH.GetNameWithFlag]向我们提供合作协议"
+ subject_rus.54.d: "[BSH.GetNameWithFlag]提议我们与他们的农业工业综合体签订一项涉及合作的贸易协定。我们会同意吗？ "
+ subject_rus.54.a: "不错的提议"
+ subject_rus.54.b: "不"
+ subject_rus.55.t: "[FROM.GetNameWithFlag]已经同意合作"
+ subject_rus.55.d: "[FROM.GetNameWithFlag]已同意与我们签订与我国农业产业合作的合同"
+ subject_rus.55.a: "很好"
+ subject_rus.56.t: "[FROM.GetNameWithFlag]拒绝合作"
+ subject_rus.56.d: "[FROM.GetNameWithFlag]拒绝与我们签订农业产业合作合同"
+ subject_rus.56.a: "很好"
+ BSH_agro_export: "与§Y[BSH.GetNamewithFlag]§!合作"
