--- a/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_subideology_parties_l_simp_chinese.yml
@@ -3841,25 +3841,25 @@
  LUX.Monarchist: "£LUX_nationalist_monarchist 拿骚王室"
  LUX.Monarchist_icon: "£LUX_nationalist_monarchist"
  LUX.Monarchist_desc: ""
- MAL.conservatism: "£generic_conservatism_small 复兴与崛起替代力量"
+ MAL.conservatism: "£MAL_western_conservative 复兴与崛起替代力量"
  MAL.conservatism_desc: "（保守主义）- 复兴与崛起替代力量\n复兴与崛起替代力量是一个反对政府的保守党，他们被认为是政府的腐败分子。 复兴与崛起替代力量由苏马那·莫里·库利巴利创立，在其平台上开展反腐败、社会保守主义和其他一些小政策的运动。"
- MAL.Communist-State: "£generic_Communist_State_small 非洲争取民主和独立团结大会"
+ MAL.Communist-State: "£MAL_communism 非洲争取民主和独立团结大会"
  MAL.Communist-State_desc: "（泛非共产主义） - 非洲民主与独立团结会\n非洲民主与独立团结会是马里的主要共产党之一。它始终按照马克思列宁主义共产主义和泛非主义的议程开展活动。该党名义上声称其主要竞选意识形态是泛非主义，但实际上其本质是共产主义。此外，该党在国际上加入了国际共产主义研讨会，后来加入了国际共产党和工人党会议，使其成为马里最重要的共产主义政党之一并得到认可。"
- MAL.neutral_Social: "£generic_neutral_Social_small 马里民主联盟 - 非洲团结与正义党"
+ MAL.neutral_Social: "£MAL_neutral_social 马里民主联盟 - 非洲团结与正义党"
  MAL.neutral_Social_desc: "（民主社会主义）- 马里民主联盟-非洲团结与正义党\n马里民主联盟-非洲团结与正义党是一个民主社会主义和泛非主义政党，成立于1990年。由于组建原政党的政党，马里民主联盟-非洲团结与正义党在国内享有广泛的支持。它由马克思列宁主义者、马里移民和政治流亡者组成，更包含一个支持多种社会主义意识形态并鼓励马里政府在非洲积极参与的伞式政党。"
- MAL.Neutral_green: "£generic_Neutral_green_small 马里生态党"
+ MAL.Neutral_green: "£MAL_neutral_green 马里生态党"
  MAL.Neutral_green_desc: "（环保主义）- 马里生态党\n马里生态党是马里的绿党，是国际组织全球绿色组织的成员。它拥护绿色政治的许多观点，包括可持续经济增长、气候变化政策和环境保护。"
- MAL.Nat_Autocracy: "£generic_Nat_Autocracy_small 马里武装力量"
+ MAL.Nat_Autocracy: "£MAL_nationalist_junta 马里武装力量"
  MAL.Nat_Autocracy_desc: "（军政府）- 马里武装力量\n马里武装部队是马里政府的军队，由马里陆军、马里共和国空军和国民警卫队组成。该军队于1960年法国非殖民化时期组建，最初由马里应征入伍者和法国武装部队的志愿退伍军人组成。马里武装部队随后将继续与图阿雷格人进行一系列冲突，并参加整个西非和中非的维和行动。"
- MAU.Western_Autocracy: "£generic_Western_Autocracy_small 复兴民主共和党"
+ MAU.Western_Autocracy: "£MAU_western_autocracy 复兴民主共和党"
  MAU.Western_Autocracy_desc: ""
- MAU.anarchist_communism: "£generic_anarchist_communism_small 人民进步联盟"
+ MAU.anarchist_communism: "£MAU_anarchist_communism 人民进步联盟"
  MAU.anarchist_communism_desc: ""
- MAU.neutral_Social: "£generic_neutral_Social_small 民主力量集会"
+ MAU.neutral_Social: "£MAU_neutral_socialism 民主力量集会"
  MAU.neutral_Social_desc: ""
- MAU.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 全国改革发展大会"
+ MAU.Neutral_Muslim_Brotherhood: "£MAU_muslim_brotherhood 全国改革发展大会"
  MAU.Neutral_Muslim_Brotherhood_desc: ""
- MAU.Nat_Populism: "£generic_Nat_Populism_small 共和国联盟"
+ MAU.Nat_Populism: "£MAU_national_populist 共和国联盟"
  MAU.Nat_Populism_desc: ""
  MAY.socialism: "£generic_socialism_small 替代阵线"
  MAY.socialism_desc: ""
@@ -7554,9 +7554,9 @@
  IRQ.Nat_Fascism: "£IRQ_Nat_Autocracy_small 伊拉克复兴党"
  IRQ.Nat_Fascism_desc: "复兴党 - 伊拉克阿拉伯社会主义复兴党于1968年通过军事政变上台。该党原与泛阿拉伯主义的叙利亚复兴党同属一个政党，伊拉克支部以伊拉克民族主义为核心意识形态， 分裂演变成一场血海深仇，叙利亚支持伊朗对抗伊拉克。在萨达姆·侯赛因的领导下，它推动了基于专制主义和日益伊斯兰化的先前世俗国家的军国主义“大美索不达米亚”的复兴。"
  LEB.Autocracy_icon: "£SYR_Autocracy"
- MAU.Autocracy: "£generic_Autocracy_small 社会民主统一党"
+ MAU.Autocracy: "£MAU_autocracy 社会民主统一党"
  MAU.Autocracy_desc: ""
- MAU.Nat_Fascism: "£generic_Nat_Fascism_small 民族先锋党"
+ MAU.Nat_Fascism: "£MAU_national_fascism 民族先锋党"
  MAU.Nat_Fascism_desc: ""
  PAL.Autocracy: "£generic_Autocracy_small 闪电突击队"
  PAL.Autocracy_icon: "£generic_Autocracy_small"
@@ -7632,17 +7632,17 @@
  ERI.Monarchist_ETH_desc: "（君主制）\n所罗门王朝\n\n世界上统治时间最长的王朝之一，也是非洲统治时间最长的王朝，从1270年到1975年被迫废除，总共统治了705年。有人声称这个王朝可以追溯到所罗门王本人的统治时期，因此得名，这种与圣经人物的接近主要是主要以加勒比海为基础的拉斯塔法里运动的原因。\n\n然而，这是一个相对较新的王朝分支，其名称为§3阿克苏姆王室§!，他们得到厄立特里亚地区仍然宣誓效忠的人的支持到了旧王朝，无论他们的数量有多么少。"
  LOG.Nat_Autocracy: "£generic_Nat_Autocracy_small 中非共和国复兴人民阵线"
  LOG.Nat_Autocracy_desc: "（军事叛乱组织）- 中非共和国复兴人民阵线\n中非复兴人民阵线是作为一个叛乱组织而成立的，是几个前塞雷卡叛乱派别之一。在努尔丁·亚当的领导下，该组织在中非共和国东北部建立了自己的平行国家，称为洛贡共和国（亦称达尔库提）。"
- MAL.liberalism_2003: "£generic_liberalism_small 共和民主联盟"
+ MAL.liberalism_2003: "£MAL_western_liberalism 共和民主联盟"
  MAL.liberalism_2003_desc: "（社会自由主义）- 共和民主联盟\n共和民主联盟是马里的一个社会自由主义政党。该党由苏马伊拉·西塞的支持者创立，其成立是为了反对当时的总统阿尔法·奥马尔·科纳雷，后者支持阿马杜·图埃反对自己的政党。此外，该党在地区上隶属于非洲自由网络，随后又隶属于更广泛的国际公认的中间派民主国际。"
- MAL.socialism_2001: "£generic_socialism_small 马里集会"
+ MAL.socialism_2001: "£MAL_western_socialist 马里集会"
  MAL.socialism_2001_desc: "(社会主义) - 马里集会\n马里集会成立于2001年，是易卜拉欣·布巴卡尔·凯塔的政党。他和该党支持民主，维护国家稳定，并与图阿雷格人进行谈判，拉近他们与政府的距离。该党还致力于通过消除教育障碍、改善社会保障结构、为脆弱地区提供水和灌溉，以及更广泛的政策改革，为马里所有人民带来繁荣，从而让马里走向未来。"
- MAL.anarchist_communism: "£generic_anarchist_communism_small 苏丹联盟 - 非洲民主联盟"
+ MAL.anarchist_communism: "£MAL_anarchist_communism 苏丹联盟 - 非洲民主联盟"
  MAL.anarchist_communism_desc: "（泛非社会主义者） - 苏丹联盟 - 非洲民主集会\n苏丹联盟 - 非洲民主集会是马里的一个左翼非洲社会主义者和泛非主义政党，与非洲民主党关系密切。在脱离马里民主联盟之前，该党是马里民主联盟的活跃成员。"
- MAL.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small 民主与发展联盟"
+ MAL.Neutral_Muslim_Brotherhood: "£MAL_muslim_brotherhood 民主与发展联盟"
  MAL.Neutral_Muslim_Brotherhood_desc: "（伊斯兰民主主义） - 民主与发展联盟\n民主与发展联盟由哈桑·巴里于1992年创立，旨在反对当时的总统阿尔法·奥马尔·科纳雷。该党以一系列保守的伊斯兰民主价值观为竞选纲领，党内部分派别更倾向于右翼。该党的主要宗旨之一是将更多的伊斯兰民主带入马里，开启一个影响力的新时代。"
- MAL.Neutral_Communism: "£generic_Neutral_Communism_small 马里劳动党"
+ MAL.Neutral_Communism: "£MAL_neutral_communism 马里劳动党"
  MAL.Neutral_Communism_desc: "（霍查主义-共产主义）- 马里劳动党\n该党最初成立于1958年，是一个马克思列宁主义政党，后来成为马里民主联盟的成员，之后成为一个分裂派别。马里劳动党今天仍然是马里民主联盟内的一个霍查主义-共产主义分裂派别。作为一个反修正主义的共产党，它更接近马克思列宁主义的真正教义，并对美国、俄罗斯、欧盟和中国持极端批评态度。"
- MAL.Neutral_conservatism: "£generic_Neutral_conservatism_small 杜尔政府"
+ MAL.Neutral_conservatism: "£MAL_neutral_conservative 杜尔政府"
  MAL.Neutral_conservatism_desc: "（大帐篷保守主义）- 杜尔政府\n阿马杜·图马尼·杜尔是马里政治家，1991年至1992年担任过渡政府主席，监督了该国首次多党选举。此外，他还是前总统穆萨·特拉奥雷的私人卫队队长，协助领导革命，并主持了军民过渡进程，起草了马里宪法。他以将军军衔退役，他选择以独立候选人身份参选，吸引了来自各个政治派别的选民。该党代表了他在每次选举中对他政纲的支持。"
  SEL.Neutral_Autocracy_1: "£generic_Neutral_Autocracy_small 塞雷卡"
  SEL.Neutral_Autocracy_1_desc: "塞雷卡是中非共和国反叛民兵组织的联盟。该组织主要从该国的穆斯林人口中汲取力量，由正义与和平爱国者公约和拯救国家爱国者公约的“基本”分裂组织组成。然后，它又吸收了许多其他反叛组织，其中最引人注目的是由米歇尔·乔托迪亚领导的民主力量团结联盟，他将成为该组织在中非共和国内战中的领导人。"
@@ -7792,3 +7792,53 @@
  MOR.Nat_Fascism_CUN_icon: "£MOR_DC"
  MOR.Nat_Autocracy_icon: "£MOR_ARM"
  MOR.Monarchist_icon: "£MOR_MON"
+ DON.conservatism_desc: "立宪民主党"
+ DON.liberalism_desc: "自由联盟"
+ DON.socialism_desc: "社会民主党"
+ DON.Communist-State_desc: "俄罗斯共产党"
+ DON.anarchist_communism_desc: "农民工会"
+ DON.Conservative_desc: "统一顿河"
+ DON.oligarchism_desc: "人民党"
+ DON.Neutral_Communism_desc: "激进社会主义党"
+ DON.neutral_Social_desc: "俄罗斯社会民主工党"
+ DON.Neutral_conservatism_desc: "救国阵线"
+ DON.Nat_Fascism_desc: "俄罗斯民族团结"
+ DON.Nat_Populism_desc: "国家共和党"
+ DON.Nat_Autocracy_desc: "哥萨克圈"
+ DON.Monarchist_desc: "地方议会。成立的目的是选举新沙皇并解决重要的政府问题。"
+ MAL.conservatism_icon: "£MAL_western_conservative"
+ MAL.liberalism_2003_icon: "£MAL_western_socialist"
+ MAL.socialism_2001_icon: "£MAL_western_socialist"
+ MAL.anarchist_communism_icon: "£MAL_anarchist_communism"
+ MAL.Communist-State_icon: "£MAL_communism 非洲团结"
+ MAL.Neutral_Muslim_Brotherhood_icon: "£MAL_muslim_brotherhood"
+ MAL.neutral_Social_icon: "£MAL_neutral_social"
+ MAL.Neutral_Communism_icon: "£MAL_neutral_communism"
+ MAL.Neutral_green_icon: "£MAL_neutral_green"
+ MAL.Neutral_conservatism_icon: "£MAL_neutral_conservative"
+ MAL.Nat_Autocracy_icon: "£MAL_nationalist_junta"
+ MAU.Western_Autocracy_icon: "£MAU_western_autocracy"
+ MAU.conservatism: "£MAU_western_conservative 民主进步联盟"
+ MAU.conservatism_icon: "£MAU_western_conservative"
+ MAU.socialism: "£MAU_western_socialist 尊严"
+ MAU.socialism_icon: "£MAU_western_socialist"
+ MAU.socialism_desc: ""
+ MAU.anarchist_communism_icon: "£MAU_anarchist_communism"
+ MAU.Autocracy_icon: "£MAU_autocracy"
+ MAU.Conservative: "£MAU_conservative 进步力量联盟"
+ MAU.Conservative_icon: "£MAU_conservative"
+ MAU.conservatism_desc: ""
+ MAU.neutral_Social_icon: "£MAU_neutral_socialism"
+ MAU.neutral_Social_alt: "£MAU_neutral_social_alt 国家民主联盟"
+ MAU.neutral_Social_alt_icon: "£MAU_neutral_social_alt"
+ MAU.Neutral_conservatism: "£MAU_neutral_conservative 哈特姆"
+ MAU.Neutral_conservatism_desc: ""
+ MAU.Neutral_conservatism_icon: "£MAU_neutral_conservative"
+ MAU.Neutral_Muslim_Brotherhood_icon: "£MAU_muslim_brotherhood"
+ MAU.Nat_Populism_icon: "£MAU_national_populist"
+ MAU.Nat_Populism_alt: "£MAU_national_populist_alt 艾哈迈德党"
+ MAU.Nat_Populism_alt_icon: "£MAU_national_populist_alt"
+ MAU.Nat_Fascism_icon: "£MAU_national_fascism"
+ MAU.Nat_Autocracy: "£MAU_nationalist_junta 毛里塔尼亚武装力量"
+ MAU.Nat_Autocracy_desc: ""
+ MAU.Nat_Autocracy_icon: "£MAU_nationalist_junta"
