--- a/localisation/simp_chinese/MD_focus_EU_POTEF_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_POTEF_l_simp_chinese.yml
@@ -345,7 +345,7 @@
  EFS_flag_category_desc: "随着欧洲联邦的成立，各成员国一致决定采用具有能够代表全欧洲图案的新旗帜。"
  EFS_flag_change: "更换欧洲联邦旗帜"
  EFS_flag_change_desc: "更换为具有能够代表全欧洲图案的旗帜。"
- USoE_Flag_Reset_Flag_category: "欧罗巴合众国旗帜"
+ USoE_Flag_Reset_Flag_category: "欧洲合众国旗帜"
  USoE_Flag_Reset_Flag_category_desc: ""
- USoE_reset_flag: "重置欧罗巴合众国旗帜"
- USoE_reset_flag_desc: "将欧罗巴合众国旗帜更改为标准欧盟旗帜（无法撤消）"
+ USoE_reset_flag: "重置欧洲合众国旗帜"
+ USoE_reset_flag_desc: "将欧洲合众国旗帜更改为标准欧盟旗帜（无法撤消）"
