--- a/localisation/simp_chinese/MD_focus_EU_USoE_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_USoE_l_simp_chinese.yml
@@ -276,7 +276,7 @@
  EU_USoE_environmental_imperialism_show_oceania_desc: "大洋洲环境帝国主义"
  EU_USoE_environmental_imperialism_hide_oceania: "隐藏大洋洲环境帝国主义"
  EU_USoE_environmental_imperialism_hide_oceania_desc: "隐藏大洋洲环境帝国主义"
- tooltip_form_USoE: "§Y欧洲合众国§!将会形成\n你将收到每个成员的§Y债务、国库和投资§!\n你将获得§Y所有欧洲成员的领土核心§!"
+ tooltip_form_USoE: "§Y欧洲合众国§!将会成立\n你将收到每个成员的§Y债务、国库和投资§!\n你将获得§Y所有欧洲成员的领土核心§!"
  tooltip_update_EU_military_leaders: "移除每个指挥官的军事重组特质"
  tooltip_update_EU_country_leaders: "欧洲国家领导人可用"
  tooltip_USoE_capital: "§Y欧洲首都§!决议将可用"
@@ -308,8 +308,8 @@
  tooltip_USoE632_effect: "皇帝将是霍亨索伦家族的成员"
  tooltip_USoE643_effect: "皇帝将继承神圣罗马帝国的法统"
  tooltip_USoE644_effect: "皇帝将继承自己家王朝的法统"
- tooltip_USoE645_effect: "新的§Y皇帝§!已经加冕，§Y[THIS.Monarchist_L]§!改变其力量！"
- USoE: "§Y[EUU.GetFlag]欧洲合众国§!形成"
+ tooltip_USoE645_effect: "新的§Y皇帝§!已经加冕。"
+ USoE: "§Y[EUU.GetFlag]欧洲合众国§!成立"
  tooltip_USoE_Western_Autocracy_rise_5: "§Y[THIS.Western_Autocracy_L]§!获得§G5%§!支持率"
  tooltip_USoE_conservatism_rise_5: "§Y[THIS.conservatism_L]§!获得§G5%§!支持率"
  tooltip_USoE_liberalism_rise_5: "§Y[THIS.liberalism_L]§!获得§G5%§!支持率"
