--- a/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_EU_l_simp_chinese.yml
@@ -171,7 +171,7 @@
  EUevent.17.d: "§C[EUU.GetFlag]欧洲联盟§!与[TUR.GetNameWithFlag]达成了关于阻止非法移民从土耳其到欧洲的协议。根据欧盟-土耳其协议，所有来自土耳其到希腊岛屿的新非法移民与尝试寻求庇护者和那些申请庇护者都已经被宣布不可受理，并会被送返土耳其。§C[EUU.GetFlag]欧洲联盟§!会支付三十亿欧元以支持土耳其境内的难民设施。"
  EUevent.17.a: "好！"
  EUevent.3.t: "欧洲合众国"
- EUevent.3.d: "在二次世界大战后的一次演讲中，邱吉尔总结:\n\"我们必须建立一个类欧罗巴合众国。以此，数以百万计的劳动者才有办法重新找回值得活下去的单纯快乐与希望。过程非常简单。所需的是数以百万计的男女下定决心去做对的事而不是错误的事，并以获得祝福而不是诅咒作为他们的回报。\"\n\n\"因此，我对你们说:让欧洲站起来吧!\"\n\n 在超过七十年的欧洲统合后，§C[EUU.GetFlag]欧洲联盟§!成员国决定放弃他们的主权并成立§C[EUU.GetFlag]欧洲合众国§!"
+ EUevent.3.d: "在二次世界大战后的一次演讲中，邱吉尔总结:\n\"我们必须建立一个类欧洲合众国。以此，数以百万计的劳动者才有办法重新找回值得活下去的单纯快乐与希望。过程非常简单。所需的是数以百万计的男女下定决心去做对的事而不是错误的事，并以获得祝福而不是诅咒作为他们的回报。\"\n\n\"因此，我对你们说:让欧洲站起来吧!\"\n\n 在超过七十年的欧洲统合后，§C[EUU.GetFlag]欧洲联盟§!成员国决定放弃他们的主权并成立§C[EUU.GetFlag]欧洲合众国§!"
  EUevent.3.a: "欢乐颂！"
  EUevent.4.t: "欧洲合众国"
  EUevent.4.d: "[FROM.GetNameWithFlag]正在将§C[EUU.GetFlag]欧洲联盟§!的成员国团结在一起，以组成一个名为§C[EUU.GetFlag]欧洲合众国§!的超级欧洲国家。[ROOT.GetNameWithFlag]将放弃它的主权，并加入§C[EUU.GetFlag]欧洲合众国§!。"
@@ -2733,7 +2733,7 @@
  focus_EU_mff_EP_approval: "草案得到了欧洲议会的批准"
  focus_EU_budget_EP_approval: "草案得到了欧洲议会的批准"
  cant_invoke_article_50: "§Y[ROOT.GetNameWithFlag]§!最近撤回了§Y里斯本条约第50条§!相关决议（剩余天数：[?cant_invoke_article_50:days_left|Y0]）"
- not_usoe_tt: "尚未成立欧罗巴合众国"
+ not_usoe_tt: "尚未成立欧洲合众国"
  not_poteuf_tt: "尚未成立欧罗巴联邦"
  not_omt_start: "直接货币交易项目尚未开始"
  EU_has_over_five_percent_pop_tt: "§Y[ROOT.GetAdjectiveCap]§!的人口与欧盟总人口比例§G5%§!（当前比例：[?ROOT.var_EUpopRatio|Y%2]）"
@@ -2919,7 +2919,7 @@
  EU_show_available_611_loc_key: "内部扩张"
  EU_show_available_112_loc_key: "欧罗巴联邦"
  EU_show_available_110_loc_key: "欧盟联邦化"
- EU_show_available_111_loc_key: "欧罗巴合众国"
+ EU_show_available_111_loc_key: "欧洲合众国"
  EU_show_available_999_loc_key: "欧盟预算草案"
  EU_show_available_998_loc_key: "多年期财务框架草案"
  focus__EP_agenda: "我们目前没有活动的议程。"
