--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -146,6 +146,22 @@
  SUB_economic_liberalism: "Free Markets, Free People"
  SUB_economic_liberalism_desc: "Free markets are the key to lifting our Republic out of poverty. We should get government out of the private sector and let businesses do their thing, without fear or favor from the government."
 
+ SUB_internal_policy: "Foreign Policy Activities"
+ SUB_internal_policy_desc: "Russia is actively engaged in foreign policy activities, we are ready to participate in it and conduct various kinds of relations with countries on behalf of Russia and our republic"
+ SUB_russia_islamic: "Russia - The Islamic World"
+ SUB_russia_islamic_desc: "Russia - The Islamic World is a project that was created relatively recently for Russia's interaction with the Islamic world"
+ SUB_russia_belarus: "Russia - Belarus"
+ SUB_russia_belarus_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
+ SUB_russia_china: "Russia - China"
+ SUB_russia_china_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
+ SUB_russia_cuba: "Russia - Cuba"
+ SUB_russia_cuba_desc: "Russia and this country have long-standing historical and political relations, and we are ready to become their subject too"
+
+ SUB_trade_islam_tt: "We will get §Yaccess§! to §Ytrade deals§! with some countries of the §GIslamic world§!"
+ SUB_trade_belarus_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[BLR.GetNamewithFlag]§!"
+ SUB_trade_china_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[CHI.GetNamewithFlag]§!"
+ SUB_trade_cuba_tt: "We will get §Yaccess§! to §Ytrade deals§! with §Y[CUB.GetNamewithFlag]§!"
+
 
  SUB_min_obr: "Ministry of Education"
  SUB_min_obr1: "Ministry of Education"
@@ -195,6 +211,7 @@
  TAT_tatneft_start: "Open a Company For The Production Of Automotive Rubber"
  TAT_tatneft_tech: "Investments In The Energy Sector"
  TAT_tatneft_tech2: "Invest in Green Energy"
+
  TAT_tatneft_per: "Offer §Y[PER.GetNamewithFlag]§! An Oil Contract"
  TAT_tatneft_tur: "Offer §Y[TUR.GetNamewithFlag]§! An Oil Contract"
  TAT_tatneft_syr: "Offer §Y[SYR.GetNamewithFlag]§! An Oil Contract"
@@ -615,6 +632,7 @@
  SOV_added_gudermez1: "§YSend soldiers§! for training in the §Y[CHE.GetFlag]Chechen§! Gudermes"
  SOV_added_kharkivz: "§YIntegrate§! the §Y[HPR.GetFlag]Kharkiv§! Defense Concern"
  SOV_added_kharkivz1: "§YIntegrate§! the §Y[HPR.GetFlag]Kharkiv§! Defense Concern"
+
  BSH_subject_aes: "Request Permission For The Construction of The Bashkir NPP"
  BSH_unite_idel_ural: "Request For The Creation Of Idel-Ural"
  BSH_unite_volga: "Request For The Creation Of Volga SSR"
@@ -623,18 +641,26 @@
  BSH_islamic_world_irq: "Russia - The Islamic World: [IRQ.GetNameWithFlag]"
  BSH_islamic_world_taj: "Russia - The Islamic World: [TAJ.GetNameWithFlag]"
  BSH_islamic_world_mor: "Russia - The Islamic World: [MOR.GetNameWithFlag]"
- TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural"
+
+
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
  CHE_attack_ukr: "Propose An Attack On [UKR.GetNameWithFlag]"
  CHE_bund_sil: "Organize a Separatist Rebellion In [POL.GetNameWithFlag]"
  CHE_attack_blr: "Propose An Attack On [BLR.GetNameWithFlag]"
  CHE_attack_pol: "Propose An Attack On [POL.GetNameWithFlag]"
  CHE_unite_ing_last: "Request For The Creation Of Chechen-Ingush Republic"
+
+ TAT_unite_idel_ural: "Request For The Creation Of Idel-Ural"
  TAT_islamic_world_tur: "Russia - The Islamic World: [TUR.GetNameWithFlag]"
  TAT_islamic_world_sau: "Russia - The Islamic World: [SAU.GetNameWithFlag]"
  TAT_islamic_world_bhr: "Russia - The Islamic World: [BHR.GetNameWithFlag]"
  TAT_islamic_world_uae: "Russia - The Islamic World: [UAE.GetNameWithFlag]"
  TAT_islamic_world_qat: "Russia - The Islamic World: [QAT.GetNameWithFlag]"
+ TAT_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
+ TAT_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
+ TAT_world_cuba: "Partnership with: [CUB.GetNameWithFlag]"
+
+
  PMR_attack_mlv: "Propose An Attack On [MLV.GetNameWithFlag]"
 
  subject_rus.1.t: "Exclusion from the Federation Council"
