--- a/Changelog.txt
+++ b/Changelog.txt
@@ -184,8 +184,9 @@ v1.10.0
   - Added Foreign Influence, Foreign Influence Auto Cap and Foreign Influence Defense to Configurable Toolbar
   - Added shortcuts to a number of User Interfaces
   - Improved the Expected Laws screen by adding a clearer informational on the main screen
-  - Moved all of the Middle Eastern music (Arabic, Israeli, etc) to the new music stations "Breeze of the East"
+  - Moved all of the Middle Eastern music (Arabic, Israeli, etc) to the new music station "Breeze of the East"
   - Added Euroscepticism to Configurable Toolbar
+  - Added a decision under the "Political Decisions" menu to auto-decline all corruption offers
 
  User Interface:
   - Reworked the Research Slot system to be a Custom GUI
