--- a/localisation/english/MD_decisions_l_english.yml
+++ b/localisation/english/MD_decisions_l_english.yml
@@ -75,6 +75,12 @@
  return_democracy: "§1Allow§! democracy and elections in §Y[Root.GetFlag][Root.GetName]§!"
  return_democracy_desc: "We can choose to democratize the country and begin holding real elections. However, while we still would remain in power for now, it could be dangerous to allow the people to decide."
 
+ auto_decline_corruption_offers: "Decline all Corruption Offers"
+ auto_decline_corruption_offers_desc: "Will automatically decline all corruption events that offer bonuses with the risk of increasing corruption level."
+
+ lift_auto_decline_corruption_events: "Receive Corruption Offers"
+ lift_auto_decline_corruption_events_desc: "Will lift the current status of automatically declining all corruption offers."
+
  demobilize_after_warfare_mission: "§GDemobilize§! the Nation"
  demobilize_after_warfare_mission_desc: "Our warring days have concluded and now it is time for us to reel in our military spending."
 
