subject sov try create economic stability

--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -839,6 +839,12 @@
  subject_rus.56.d: "[FROM.GetNameWithFlag] refused to sign a contract with us for cooperation with our agro-industry"
  subject_rus.56.a: "Nice"
 
+
+
+ subject_rus.100.t: ""
+ subject_rus.100.d: ""
+ subject_rus.100.a: "
+
  SUB_bsh_hubei: "Bashkir Investments"
  BSH_agrodom: "Belarusian "Amkodor""
  CRM_idea_decommunization: "Decommunization"
