legco working and some effects

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -316,10 +316,9 @@
  CLOSE_LegCo_BUTTON: "Close the LegCo"
  HKG_LegCo_TITLE: "Legislative Council"
 
- legco_pro_beijing_camp_desc: " £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n£HKG_Autocracy The New People's Party (NPP)\n£HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n£HKG_Neutral_conservatism Path of Democracy\n£HK_Liberal_Party Liberal Party\n£generic_Neutral_Libertarian_small Third Side\n"
- legco_pan_democracy_camp_desc: " £HK_Demosisto Demosisto\n£HKG_conservatism Democratic Party\n£HK_Citizens_Party Citizens Party\n[legco_HKG_socialism]\n£HKG_Neutral_Autocracy Democratic Alliance\n£HK_Green Green Party Hong Kong\n"
- legco_localist_camp_desc: "  £HK_Indigenous Hong Kong Indigenous\n£HK_National Hong Kong National Party\n£HK_People_Power People Power\n£HK_Conservative_Alt_New Conservative Party"
- legco_HKG_socialism: "[ROOT.legco_HKG_socialism]"
+ legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
+ legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n"
+ legco_localist_camp_desc: "§GLocalist camp§!:\n £HK_Indigenous Hong Kong Indigenous\n £HK_National Hong Kong National Party\n £HK_People_Power People Power\n £HK_Conservative_Alt_New Conservative Party"
 
  legco_pro_beijing_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!"
  legco_pan_democracy_seats: "§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!"
@@ -329,18 +328,20 @@
  legco_opposition_seats: "Negative: §R[?legco_negative_seats]§!"
  legco_total_seats: "Total: §Y[?legco_total_seats]§!"
 
- legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support]/[?legco_PE_seats]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support]/[?legco_PD_seats]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support]/[?legco_LC_seats]§!)"
+ legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats|0]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats|0]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats|0]§!)"
 
  legco_motion_title: "Current Motion: "
  legco_current_motion: "§Y[ROOT.legco_current_motion]§!"
  legco_motion_effect: "[ROOT.legco_motion_effect]"
- legco_require_votes: "[ROOT.legco_motion_effect]"
+ legco_require_votes: "You need to have more than [?legco_required_seats|0] seats to pass this motion."
  legco_none_motion_tt: "None"
  legco_clock_trigger_tt: "There is a motion currently being voted on."
  legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (§G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
+ legco_electoral_reform_426_bill_tt: "The Proposals for selecting the Chief Executive and forming the LegCo"
  legco_funding_XRL_tt: "Funding of §3XRL HK section§!"
+ legco_co_location_bill_tt: "Co-Location Bill"
 
  legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!."
  legco_approve_funding_for_XRL_focus_tt: "The §YFunding of§! §3XRL HK section§! will be voted in the §YLegCo§!."
@@ -348,8 +349,12 @@
 
  legco_effect_railway_development_strategy_2000_tt: "Add §YRailway Development Strategy 2000§!, which grants()"
  legco_effect_approve_funding_for_XRL_tt: "[HKG.GetFlag]Hong Kong §YTreasury§!: $-0.25 Billion\n§YHong Kong§! Add §G1§! §YRailways§! in a Province in the state.\n([CHI.GetFlag]People's Republic of China)[CHI.GetFlag]Chinese §YTreasury§!: $-0.75 Billion\n§YPearl River Delta§!:\n  Add §G3§! §YRailways§! in a province in the state"
+ legco_effect_electoral_reform_tt: "This motion's effect is decided by §YMainland's goverment choice§!."
 
  legco_test_text: "<WIP>"
+ legco_election_reform_a_effect_tt: "§YEffect:§!\n §OMaintain the status quo§!\n§RThis may cause some to be upset.§!"
+ legco_election_reform_b_effect_tt: "§YEffect:§!\n The number of §Yelectoral commissioners§! in the §LElectoral Commission§! will §Gincrease§! by §Y800§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y10§!\n §gThe \"timetable for universal suffrage\" wouldn't be drawn up.§!\n§YThis may cause some to be upset.§!"
+ legco_election_reform_c_effect_tt: "§YEffect:§!\n Since the next election will be by §4universal suffrage§!.\n The number of §YLegCo§! seats will §Gincrease§! by §Y30§!.\n §YAbolish§! §4\"Functional constituency\"§!"
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
@@ -387,6 +392,11 @@
  hongkong.9.d: "Hong Kong Police requires Norinco to purchase some infantry weapons and other equitments today. Should we sell them the weapons?"
  hongkong.9.a: "We have no reason to reject. Agree it!"
  hongkong.9.b: "Sorry but we are also lacking of weapons."
+ hongkong.10.t: "The Hong Kong Government requires us to whether universal suffrage could be achieved in the next election."
+ hongkong.10.d: "According to the Basic Law of Hong Kong, the first two terms Chief Executives and the first three terms of the Legislative Council of Hong Kong were nominated and elected by the Election Committee, not by universal suffrage. The 2007 Chief Executive Election and the 2008 LegCo Election will be an opportunity to determine whether we should reform Hong Kong's democratic system, so that Hong Kong can ultimately achieve the goal of universal suffrage."
+ hongkong.10.a: "Hong Kong's electoral system will maintain the status quo."
+ hongkong.10.b: "We don't quite agree with directly universal suffrage, but we'll support some gradual and orderly electoral reforms."
+ hongkong.10.c: "Might as well get radical and just allow universal suffrage!"
  hongkong_news.4.t: "123 Democratic Alliance is disbanded today."
  hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
  hongkong_news.4.a: "A good news, isn't it?"
