--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1462,7 +1462,7 @@
  VICTORY_POINTS_4410: "Satna"
  VICTORY_POINTS_10332: "Singrauli"
  VICTORY_POINTS_11955: "Meerut"
- VICTORY_POINTS_10794: "Aligahr"
+ VICTORY_POINTS_10794: "Aligarh"
  VICTORY_POINTS_4915: "Agra"
  VICTORY_POINTS_12137: "Kanpur"
  VICTORY_POINTS_5055: "Allahabad"
