--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1505,7 +1505,7 @@
  VICTORY_POINTS_10088: "Cuttack"
  VICTORY_POINTS_12462: "Brahmapur"
  VICTORY_POINTS_4104: "Baleshwar"
- VICTORY_POINTS_1538: "Raurkela"
+ VICTORY_POINTS_1538: "Rourkela"
  VICTORY_POINTS_9946: "Sambalpur"
  VICTORY_POINTS_8087: "Hyderabad"
  VICTORY_POINTS_4472: "Warangal"
