--- a/localisation/english/MD_focus_BLR_l_english.yml
+++ b/localisation/english/MD_focus_BLR_l_english.yml
@@ -1177,7 +1177,15 @@
  BLR_lit_invite: "Our agents will soon be all over the Lithuanian government, it's time to move on to drastic measures"
  #UNION STATE
  BLR_Union_state_category: "Union State"
- BLR_Union_state_category_desc: "§YThe Union State§! is a unique supranational entity where the [BLR.GetFlag][SOV.GetFlag]§Yunion§! between two states allows them to coexist without losing the independence of one of them. \n§W--------------§!\n[belarus_ready_union_state]\n[serbia_ready_union_state]"
+ BLR_Union_state_category_desc: "§YThe Union State§! is a unique supranational entity where the [BLR.GetFlag][SOV.GetFlag]§Yunion§! between two states allows them to coexist without losing the independence of one of them."
+ unionstate_belarus_tooltip: "[belarus_readys_union_state]"
+ unionstate_belarus_output_text: "[belarus_ready_union_state]"
+ BLR_belarus_ready_union_state: "§Y[?BLR.union_state|-0]§!"
+ BLR_belarus_readys_union_state: "§YPercentage§! of §Y[BLR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ BLR_belarus_notreadys_union_state: "§RUNAVAILABLE§!"
+ BLR_union_state_flag: "[BLR.GetFlag]"
+ SOV_union_state_flag: "[SOV.GetFlag]"
+
  #BELARUS
  BLR_union_migratio_card: "[union_state_flag_sov_or_blr]§YMigration Card§! of a Single Sample"
  BLR_union_migratio_card_desc: "A single migration card will make it easier for our citizens to move around the territory of the Union State"
@@ -1228,9 +1236,7 @@
  SOV_added_140z: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
  SOV_added_140z1: "§YIntegration§! Of §Y[BLR.GetFlag]Belarusian§! 140 Avia Plant"
 
- BLR_belarus_ready_union_state: "§YPercentage§! of §Y[BLR.GetNameWithFlag]§! readiness to integrate into the §YUnion State§! is equal to §Y[?BLR.union_state]%§!"
- BLR_union_state_flag: "[BLR.GetFlag]"
- SOV_union_state_flag: "[SOV.GetFlag]"
+ 
  #SERBIA
  BLR_union_migratio_cards: "[union_state_flag_sov_or_ser]§YMigration Card§! of a Single Sample"
  BLR_union_migratio_cards_desc: "A single migration card will make it easier for our citizens to move around the territory of the Union State"
@@ -1264,7 +1270,11 @@
  SER_create_union_state_desc: "Now we have finally become a Union State, such as it was conceived as a result of repeated renegotiation of agreements"
  SOV_sozdat_union_states: "[SER.GetFlag]§YCreate§! a Union State By §RForce§!"
 
- SER_serbia_ready_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§! is equal to §Y[?SER.union_state]%§!"
+ unionstate_serbia_tooltip: "[serbia_readys_union_state]"
+ unionstate_serbia_output_text: "[serbia_ready_union_state]"
+ SER_serbia_ready_union_state: "§Y[?SER.union_state|-0]§!"
+ SER_serbia_readys_union_state: "§YPercentage§! of §Y[SER.GetNameWithFlag]§! readiness to integrate into the §YUnion State§!"
+ SER_serbia_notreadys_union_state: "§RUNAVAILABLE§!"
  SER_union_state_flag: "[SER.GetFlag]"
  #Ideas
  UNION_blr_citizen: "§4Integration of the Union State§!: Single Citizenship"
