--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -661,6 +661,7 @@
 
  KHM_world_chi: "Partnership with: [CHI.GetNameWithFlag]"
  KHM_world_uzbek: "Partnership with: [CHI.GetNameWithFlag]"
+ KHM_world_belarus: "Partnership with: [BLR.GetNameWithFlag]"
  
  CHE_attack_geo: "Propose An Attack On [GEO.GetNameWithFlag]"
  CHE_attack_ukr: "Propose An Attack On [UKR.GetNameWithFlag]"
