Cleaned up evenet triggering and added an event to Spain and Morocco

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -83,6 +83,7 @@ v1.10.0
   - Fixed being able to get income from expenses
   - Removed Finnish unique names from Japanese CV fighters.
   - Fixed duplication of namelists on SOV Ships
+  - Fixed a Spanish event not firing properly for the Princess Cristina mini-crisis
 
  Content:
   - NEW TREES: Kharkiv PR, Odessa PR, Serbia, Montenegro, Kosovo, Vojvodina, Cuba
@@ -119,6 +120,7 @@ v1.10.0
   - Rebalanced and slightly tweaked Ethiopian-Eritrean war
   - Add agame rule for Germany focus
   - Reworked Moroccan politics and political leaders
+  - Added the Casablanca bombing event to Morocco
 
  Graphics:
   - Added the "Toofan MRAP" for Iran
@@ -134,6 +136,7 @@ v1.10.0
   - Optimized the performance of many models
   - Made key text icons more legible
   - New ERI leaders and portraits
+  - Added party icons to much of the Western African tags
 
  Localization:
   - Added missing loc for tech categories research speed bonus
