--- a/localisation/english/MD_focus_SPR_l_english.yml
+++ b/localisation/english/MD_focus_SPR_l_english.yml
@@ -1550,6 +1550,16 @@ l_english:
  spain.265.t: "Corruption Charges Against Infanta Cristina"
  spain.265.d: "Judge Jose Castro formalized charges against Infanta Cristina earlier today. The tax fraud charges were presented due to her relation with her husband, who was investigated for recent corruption and tax fraud. She recently denied all accusations against her and did not know about her husband's dealings. It is, of course, possible she is lying, but it is important to allow due process to take its course."
  spain.265.a: "A Blight on The Royals"
+ # Visit Ceuta & Melilla
+ spain.266.t: "Visitation to Ceuta & Melilla"
+ spain.266.d: "The cities of Ceuta & Melilla are long overdue for a visit from the prime minister of our country. The people there are inherently Spanish and as such do deserve attention from the government and our Prime Minister by and large. It may be worthwhile to ensure they are reminded that they are a core part of the country just as much as any other part."
+ spain.266.a: "Visit the Cities"
+ spain.266.b: "Eh.. Better not."
+ # Morocco - If Visits
+ spain.267.t: "Spanish Prime Minister Visits Ceuta & Melilla"
+ spain.267.d: "The Spanish Prime Minister [SPR.GetName] has visited the cities of Ceuta & Melilla. They are often not visited by their leader, but it has sparked outrage amongst several parties in the country. [Neutral_conservatism_L] is the most outspoken of these parties and some of the leadership have collectively quoted that Spain admires and supports its nationalistic and imperialist heritage. They are petitioning the government to voice their outrage."
+ spain.267.a: "Disavow the Visit"
+ spain.267.b: "It is their city..."
 
  # Decisions
  SPR_the_regions_of_spain: "Cultures of [SPR.GetName]"
@@ -1984,6 +1994,7 @@ l_english:
  SPR_declined_gibraltar: "Declined Gibraltar"
  SPR_agreed_to_moroccan_deal: "Agreed to Moroccan Deal"
  SPR_failure_to_reach_a_deal: "Failed to Reach a Deal"
+ SPR_visited_ceuta: "Visited Ceuta & Melilla"
 
  # Leader Traits
  SPR_the_new_communist_general_secretary: "The New General Secretary"
