--- a/localisation/english/MD_terrain_cities_l_english.yml
+++ b/localisation/english/MD_terrain_cities_l_english.yml
@@ -93,7 +93,7 @@
  terrain_wuhan: "Wuhan, China"
  terrain_wenzhou: "Wenzhou, China"
  terrain_taiyuan: "Taiyuan, China"
- terrain_shijiazhuang: "Shjiangzhuang, China"
+ terrain_shijiazhuang: "Shjiazhuang, China"
  terrain_shenyang: "Shenyang, China"
  terrain_qingdao: "Qingdao, China"
  terrain_nanning: "Nanning, China"
