--- a/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_CHI_l_simp_chinese.yml
@@ -605,7 +605,7 @@
  CHI_Electronic_Industry: "电子工业"
  CHI_Electronic_Industry_desc: "我们的传统工业往往集中在技术含量低的部门，如纺织业。如果我们要成为一个现代化的发达国家，我们应该促进工业发展的信息化。"
  CHI_Lenovo: "联想"
- CHI_Lenovo_desc: "联想正在迅速扩大其在笔记本电脑市场的份额，并在智慧手机、软件和电视行业取得长足进展。国家援助可使其活动受益。"
+ CHI_Lenovo_desc: "联想正在迅速扩大其在笔记本电脑市场的份额，并在智能手机、软件和电视行业取得长足进展。国家援助可使其活动受益。"
  CHI_Huawei: "华为"
  CHI_Huawei_desc: "华为是在电信和消费电子领域最具创新性的全球公司之一。我们应该支持这个正在崛起的科技巨头。"
  CHI_Xiaomi: "小米"
