--- a/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_SPR_l_simp_chinese.yml
@@ -1839,3 +1839,12 @@
  spain.265.t: "对克里斯蒂娜公主的腐败指控"
  spain.265.d: "今天早些时候，法官何塞·卡斯特罗正式对克里斯蒂娜公主提出指控。税务欺诈指控是由于她与丈夫的关系而提出的，她的丈夫最近因腐败和税务欺诈而受到调查。她最近否认了所有针对她的指控，也不知道她丈夫的交易。当然，她有可能在撒谎，但重要的是要让正当程序顺利进行。"
  spain.265.a: "皇室的祸害"
+ spain.266.t: "访问休达与梅利利亚"
+ spain.266.d: "休达和梅利利亚这两个城市早就该接受我国总理的访问了。那里的人民天生就是西班牙人，因此总体上确实值得政府和我国总理的关注。也许有必要提醒他们，他们和其他国家一样，都是这个国家的核心部分。"
+ spain.266.a: "访问城市"
+ spain.266.b: "额。。。最好不要"
+ spain.267.t: "西班牙首相访问休达和梅利利亚"
+ spain.267.d: "西班牙首相 [SPR.GetName]访问了休达和梅利利亚这两个城市。他们的领导人通常不会访问这两个城市，但这却引发了该国多个政党的愤怒。[Neutral_conservatism_L]是这些政党中最直言不讳的，一些领导人集体表示，西班牙钦佩并支持其民族主义和帝国主义传统。他们正在请愿政府表达他们的愤怒。"
+ spain.267.a: "否认访问"
+ spain.267.b: "这是他们的城市..."
+ SPR_visited_ceuta: "访问过休达与梅利利亚"
