--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -7,3 +7,37 @@ TAI_army_desc: "Republican Army"
 
 TAI_vampu: "Vampu Academy"
 TAI_army_desc: "Republican Army"
+
+
+
+
+#TAIIndustry
+TAI_umc: "UMC"
+TAI_umc_desc: "UMC is a Taiwanese company based in Hsinchu, Taiwan. It was founded as Taiwan's first semiconductor company in 1980 as a spin-off of the government-sponsored Industrial Technology Research Institute"
+TAI_tsmc: "TSMC"
+TAI_tsmc_desc: "Taiwan Semiconductor Manufacturing Company Limited is a Taiwanese multinational semiconductor contract manufacturing and design company. It is the world's second-most valuable semiconductor company,the world's largest dedicated independent semiconductor foundry, and its country's largest company, with headquarters and main operations located in the Hsinchu Science Park in Hsinchu, Taiwan"
+TAI_microchips: "Microchips"
+TAI_microchips_desc: "The microchip industry is our strength, we need to develop it as much as possible."
+TAI_electronic_world_leader: "Top Semiconductor Industry"
+TAI_electronic_world_leader_desc: "We have the best microchips in the world. Our economy is growing and this is very good."
+TAI_tainan_science_park: "Tainan Science Park"
+TAI_tainan_science_park_desc: "Tainan Science Park of Taiwan is located in Sinshih, Shanhua and Anding Districts of Tainan City with a total area of 2,565 acres (10.38 km2), and is a part of the Southern Taiwan Science Park.
+TAI_wto: "Join in WTO"
+TAI_wto_desc: "In order for our economy to grow, we need to join the WTO."
+TAI_funding_in_electronic_companies: "Investing in the electronics industry."
+TAI_funding_in_electronic_companies_desc: "There are many people and companies in our country that can and want to work, we need to help them."
+
+TAI_dlink: "D-link"
+TAI_dlink_desc: ""
+TAI_htc: "HTC"
+TAI_htc_desc: ""
+TAI_yageo: "YAGEO"
+TAI_yageo_desc: ""
+TAI_zyhel: "Zyhel"
+TAI_zyhel_desc: ""
+TAI_auo: "AUO"
+TAI_auo_desc: ""
+TAI_gigabyte: "Gigabyte"
+TAI_gigabyte_desc: ""
+TAI_asus: "ASUS"
+TAI_asus_desc: ""
