Fixed a bunch of minor CW Tools errors

--- a/localisation/english/poland_dlc_events_l_english.yml
+++ b/localisation/english/poland_dlc_events_l_english.yml
@@ -1,1 +1,3 @@
-﻿## trick to prevent loc from vanilla getting into the game
+﻿l_english:
+ poland_dlc_events_l_english: ""
+ # This is an empty localization file to prevent some overwrite problems
