--- a/localisation/english/replace/replaced_from_vanilla_effects_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_effects_l_english.yml
@@ -4,6 +4,6 @@
  EFFECT_CREATE_FM_LEADER: "$NAME|H$ becomes a General.\n"
  EFFECT_CREATE_CC_LEADER: "$NAME|H$ becomes a Lieutenant General.\n"
  EFFECT_GIVE_MILITARY_ACCESS: "Gives $COUNTRY|Y$ permission to establish military bases."
- EFFECT_SET_FUEL:0 "Sets Fuel to $VAL|0Y$."
- POLITICS_ADD_FUEL:0 "Fuel: $VAL|=+0$."\
- EFFECT_SET_FUEL_RATIO:0 "Set fuel ratio to $VAL|%.0H$."
+ EFFECT_SET_FUEL: "Sets Fuel to $VAL|0Y$."
+ POLITICS_ADD_FUEL: "Fuel: $VAL|=+0$."
+ EFFECT_SET_FUEL_RATIO: "Set fuel ratio to $VAL|%.0H$."
