--- a/localisation/english/MD_focus_TAI_l_english.yml
+++ b/localisation/english/MD_focus_TAI_l_english.yml
@@ -24,20 +24,23 @@ TAI_tainan_science_park: "Tainan Science Park"
 TAI_tainan_science_park_desc: "Tainan Science Park of Taiwan is located in Sinshih, Shanhua and Anding Districts of Tainan City with a total area of 2,565 acres (10.38 km2), and is a part of the Southern Taiwan Science Park.
 TAI_wto: "Join in WTO"
 TAI_wto_desc: "In order for our economy to grow, we need to join the WTO."
-TAI_funding_in_electronic_companies: "Investing in the electronics industry."
+TAI_funding_in_electronic_companies: "Investing in the electronics industry"
 TAI_funding_in_electronic_companies_desc: "There are many people and companies in our country that can and want to work, we need to help them."
 
 TAI_dlink: "D-link"
-TAI_dlink_desc: ""
+TAI_dlink_desc: "D-Link Systems, Inc. is a Taiwanese multinational manufacturer of networking hardware and telecoms equipments. It was founded in 1986 and headquartered in Taipei, Taiwan."
 TAI_htc: "HTC"
-TAI_htc_desc: ""
+TAI_htc_desc: "HTC Corporation, or High Tech Computer Corporation (abbreviated and trading as HTC), is a Taiwanese consumer electronics corporation headquartered in Xindian District, New Taipei City, Taiwan. Founded in 1997, HTC began as an original design manufacturer and original equipment manufacturer that designed and manufactured laptop computers."
 TAI_yageo: "YAGEO"
-TAI_yageo_desc: ""
+TAI_yageo_desc: "Yageo Corporation is a Taiwan-based electronic component manufacturing company, founded in 1977 by Pierre Chen. The company specializes in passive devices — resistors, capacitors and inductors. As of January 2020 ,they were the third largest passive component manufacturer in the world."
 TAI_zyhel: "Zyhel"
-TAI_zyhel_desc: ""
+TAI_zyhel_desc: "Zyxel Communications Corporation, a subsidiary of Zyxel Group Corporation, is a Taiwanese multinational broadband provider headquartered in the Hsinchu Science Park, Taiwan. The company was founded in 1989 by Shun-I Chu, and has three research centers, four regional headquarters, and 35 branch offices."
 TAI_auo: "AUO"
-TAI_auo_desc: ""
+TAI_auo_desc: "AUO Corporation is a Taiwanese company that specialises in optoelectronics. It was formed in September 2001 by the merger of Acer Display Technology, Inc. (the predecessor of AUO, established in 1996) and Unipac Optoelectronics Corporation. AUO offers display panel products and solutions, and in recent years expanded its business to smart retail, smart transportation, general health, solar energy, circular economy and smart manufacturing service"
 TAI_gigabyte: "Gigabyte"
-TAI_gigabyte_desc: ""
+TAI_gigabyte_desc: "Gigabyte Technology is a Taiwanese manufacturer and distributor of computer hardware."
 TAI_asus: "ASUS"
-TAI_asus_desc: ""
+TAI_asus_desc: "ASUSTeK Computer Inc. is a Taiwanese multinational computer, phone hardware and electronics manufacturer headquartered in Beitou District, Taipei, Taiwan. Its products include desktop computers, laptops, netbooks, mobile phones, networking equipment, monitors, Wi-Fi routers, projectors, motherboards, graphics cards, optical storage, multimedia products, peripherals, wearables, servers, workstations and tablet PCs. The company is also an original equipment manufacturer ."
+
+TAI_it_and_semiconductor_industry: "IT and Semiconductor Industry"
+TAI_it_and_semiconductor_industry_desc: ""
