--- a/Changelog.txt
+++ b/Changelog.txt
@@ -159,6 +159,7 @@ v1.10.0
   - Added new descriptions to the French tree
   - Updated the event loc for the Senegalese/Ivory Coast civil war events
   - Re/Localised ETH and ERI political parties
+  - Fixed typos in a number of the technology descriptions
 
  Map:
   - Revamp Iran region
