Fixed a bunch of random stuff from the MD game

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -32,6 +32,8 @@ v1.10.0
   - Reworked the French OOB so it's closer to IRL strength. (Note: Conscripts and reservists not represented)
   - Added a monthly Domestic Independence Tick to make Influence slightly harder
   - Russian troops now start in siege position around Grozny
+  - Add the ability to bankroll the enrichment facility
+  - Changing government for Salafist on electing a Salafist
 
  Bugfixes:
   - Fixed a bug when the opinion modifiers reached 100 or -100 due to an incorrectly configured decay
@@ -122,8 +124,14 @@ v1.10.0
   - Rebalanced and slightly tweaked Ethiopian-Eritrean war
   - Add agame rule for Germany focus
   - Reworked Moroccan politics and political leaders
+  - Reworked land doctrines for greater variation and more replayability
+  - Reduced air wing sizes for aircraft. Small / Medium to 50, Large to 25
+  - Adjusted air combat stats for air battle
+  - Adjust cost of aircraft frames and modules
+  - Removed interal weapons module for planes; added indivual internal weapon pylons
+  - Reduced air base size from 100 per level to 50 per level
+  - Condensed naval gun technologies for normal naval guns into a singular tech path
   - Added the Casablanca bombing event to Morocco
-
  Graphics:
   - Added the "Toofan MRAP" for Iran
   - Replaced the unit model for Russia
