--- a/localisation/english/MD_new_traits_l_english.yml
+++ b/localisation/english/MD_new_traits_l_english.yml
@@ -2,11 +2,11 @@
  emotional: "Emotional"
  emotional_desc: "Is easily swayed by emotional arguments rather than rational facts."
  rational: "Rational"
- rational_desc: "Is an calculating individual that never get swayed by emotional appeals."
+ rational_desc: "Is a calculating individual that never gets swayed by emotional appeals."
  cautious: "Cautious"
  cautious_desc: "Is careful in making decisions."
  communist_sympathizer: "Communist Sympathizer"
- communist_sympathizer_desc: "Despite outwardly appearances, some just say one thing and believe in another."
+ communist_sympathizer_desc: "Despite outward appearances, some just say one thing and believe in another."
  rash: "Rash"
  rash_desc: "Likes to make fast, impulsive decisions."
  ruthless: "Ruthless"
@@ -25,7 +25,7 @@
  internationally_decorated_commander: "Internationally Decorated Commander"
  technocrat: "Technocrat"
  zealous: "Zealous"
- zealous_desc: "Is an religious zealot."
+ zealous_desc: "Is a religious zealot."
  stubborn: "Stubborn"
  stubborn_desc: "For better or worse, this person is known for never giving up."
  agricultural_resource_economist: "Agricultural Resource Economist"
@@ -146,6 +146,9 @@
  nationalist_Nat_Populism: "Ideology: Nationalist Populist"
  nationalist_Monarchist: "Ideology: Monarchist"
  polish_president: "President of Poland"
+ diplomat: "Diplomat"
+ union_man: "Union Man"
+ educator: "Educator"
 
  afghanistan_lion_of_panjshir: "Lion of Panjshir"
  emperor_of_japan: "Emperor of Japan"
@@ -155,11 +158,11 @@
  opposes_muslim_brotherhood: "Opposes Muslim Brotherhood"
  corruptible: "Corruptible"
 
- ##Cambodia
+ # Cambodia
  samdech_akka_moha: "Samdech Akka Moha"
  ex_khmer_rouge_solider: "Ex Khmer Rouge Solider"
 
- ##Singapore
+ # Singapore
  established_parliament_member: "Established Parliament Member"
  pro_western_clique: "Pro-Western Clique"
  emerging_clique: "Emerging Clique"
@@ -170,12 +173,12 @@
  experienced_banker: "Experienced Banker"
  defender_of_democracy: "Defender of Democracy"
  actor_politician: "Actor"
- Pro_Western: "Pro Western"
+ Pro_Western: "Pro-Western"
  Fighter: "Fighter"
  Reformer: "Reformer"
  fighting_with_at_least_18_units: "Currently Commanding More than 17 units\n"
 
- ##Belarus
+ # Belarus
  last_dictator_of_europe: "Europe Last Dictator"
  anti_russian: "Russophobe"
  anti_russian_desc: "Zenon Poznyak always and everywhere saw the trail of the KGB. He is an ardent opponent of Russia and its existence"
@@ -183,7 +186,7 @@
  hater_opposition: "Hater of The Opposition"
  hater_opposition_desc: "Comrade Belokonev is an ardent hater of the opposition. His statements that it is necessary to eliminate the opposition by the dozens, causes horror in the liberal part of our country"
 
- ##Russia
+ # Russia
  leader_of_wagner: "Leader of Wagner"
  leader_of_wagner_nazi: "Leader of Wagner"
  certified_nationalist: "Certified Nationalist"
